Update grid layout to fix some overlaps

--- a/public/stylesheets/panel.css
+++ b/public/stylesheets/panel.css
@@ -29,7 +29,7 @@ aside > a:hover {
 main {
   display: grid;
   padding: 20px 100px 0px 100px;
-  grid-template-rows: 50px 1fr 100px;
+  grid-template-rows: 50px 1fr;
   gap: 20px;
 }
 
@@ -45,4 +45,9 @@ main {
   bottom: 0;
   width: 100%;
   padding: 20px;
+}
+
+.message {
+  display: grid;
+  gap: 10px;
 }
